--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>IS2 | Hub iOS 26</title>
-    <link rel="manifest" href="manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css">
@@ -12,8 +11,8 @@
 <body class="ios-bg transition-all duration-700">
 
     <div class="fixed inset-0 overflow-hidden pointer-events-none z-[-1]">
-        <div class="absolute top-[-10%] left-[-10%] w-[60%] h-[60%] bg-blue-500/10 rounded-full blur-[120px]"></div>
-        <div class="absolute bottom-[-10%] right-[-10%] w-[60%] h-[60%] bg-purple-500/10 rounded-full blur-[120px]"></div>
+        <div class="absolute top-[-10%] left-[-10%] w-[60%] h-[60%] bg-blue-500/15 rounded-full blur-[120px]"></div>
+        <div class="absolute bottom-[-10%] right-[-10%] w-[60%] h-[60%] bg-purple-500/15 rounded-full blur-[120px]"></div>
     </div>
 
     <div class="max-w-5xl mx-auto px-6 py-12 space-y-10 relative z-10">
@@ -23,7 +22,7 @@
                 <h1 class="ios-title">IS2 Dashboard</h1>
             </div>
             <div class="flex items-center gap-3">
-                <button onclick="toggleThemeManually()" class="ios-icon-btn">
+                <button onclick="toggleThemeManually()" class="ios-icon-btn shadow-sm">
                     <span id="theme-icon">🌙</span>
                 </button>
                 <div class="ios-pill">
@@ -38,18 +37,18 @@
         <main class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6 fade-in">
                 <section class="ios-card p-7 space-y-6">
-                    <h2 class="text-lg font-semibold tracking-tight">New Entry</h2>
+                    <h2 class="text-lg font-bold tracking-tight">New Entry</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-3">
                             <div class="space-y-1">
-                                <label class="text-[9px] font-black opacity-40 uppercase ml-2">Type</label>
+                                <label class="ios-label">Type</label>
                                 <select id="kategori" class="ios-input w-full">
                                     <option value="Assignment">Assignment</option>
                                     <option value="Event">Event</option>
                                 </select>
                             </div>
                             <div class="space-y-1">
-                                <label class="text-[9px] font-black opacity-40 uppercase ml-2">Priority</label>
+                                <label class="ios-label">Priority</label>
                                 <select id="priority" class="ios-input w-full">
                                     <option value="low">Low</option>
                                     <option value="medium" selected>Medium</option>
@@ -58,15 +57,15 @@
                             </div>
                         </div>
                         <div class="space-y-1">
-                            <label class="text-[9px] font-black opacity-40 uppercase ml-2">Deadline</label>
+                            <label class="ios-label">Deadline</label>
                             <input type="date" id="tglDeadline" class="ios-input w-full">
                         </div>
                         <div class="space-y-1">
-                            <label class="text-[9px] font-black opacity-40 uppercase ml-2">Detail</label>
+                            <label class="ios-label">Detail</label>
                             <textarea id="isiData" placeholder="Task description..." class="ios-input w-full h-24 pt-3 resize-none"></textarea>
                         </div>
                         <div class="space-y-1">
-                            <label class="text-[9px] font-black opacity-40 uppercase ml-2">Resource</label>
+                            <label class="ios-label">Resource</label>
                             <input type="url" id="taskLink" placeholder="https://..." class="ios-input w-full">
                         </div>
                     </div>
@@ -76,14 +75,14 @@
 
             <div class="lg:col-span-8 space-y-8 fade-in">
                 <section class="ios-card p-7 min-h-[500px]">
-                    <h2 class="text-lg font-semibold mb-6 tracking-tight">Timeline</h2>
+                    <h2 class="text-lg font-bold mb-6 tracking-tight">Timeline</h2>
                     <div id="listData" class="space-y-4"></div>
                 </section>
                 
-                <section class="ios-card p-10">
+                <section class="ios-card p-8">
                     <h2 class="text-[10px] font-black opacity-30 uppercase tracking-[0.4em] text-center mb-8">Academic Calendar</h2>
-                    <div id="calendar-month-year" class="text-[11px] font-bold mb-6 text-center opacity-60"></div>
-                    <div id="calendar-container" class="grid grid-cols-7 gap-3 max-w-[320px] mx-auto"></div>
+                    <div id="calendar-month-year" class="text-[11px] font-bold mb-6 text-center opacity-70"></div>
+                    <div id="calendar-container" class="calendar-grid mx-auto"></div>
                 </section>
             </div>
         </main>
@@ -93,7 +92,7 @@
         <div class="absolute inset-0 bg-black/60 backdrop-blur-xl" onclick="closeDeleteModal()"></div>
         <div class="ios-card relative w-full max-w-sm p-8 text-center animate-ios-slide">
             <h3 class="text-xl font-bold mb-2">Delete Task?</h3>
-            <p class="text-sm opacity-50 mb-8">This action is permanent and cannot be undone.</p>
+            <p class="text-sm opacity-50 mb-8">This action cannot be undone.</p>
             <div class="flex flex-col gap-3">
                 <button id="confirmDeleteBtn" class="w-full py-4 rounded-2xl bg-red-500 text-white font-bold">Delete</button>
                 <button onclick="closeDeleteModal()" class="w-full py-4 rounded-2xl bg-zinc-200/50 dark:bg-zinc-800 font-bold">Cancel</button>
