--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="flex justify-between items-end px-2">
             <div class="space-y-1">
                 <p id="clock" class="ios-time">00:00:00</p>
-                <h1 class="ios-title text-4xl">IS2 Dashboard</h1>
+                <h1 class="ios-title text-4xl">INFORMATION SYSTEM 2</h1>
             </div>
             <div class="flex items-center gap-4">
                 <button onclick="toggleThemeManually()" class="ios-icon-btn shadow-lg">
