--- a/index.html
+++ b/index.html
@@ -2,100 +2,94 @@
 <html lang="id" data-theme="dark">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>IS2 Hub | Pro Monochrome</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>IS2 HUB | MONOCHROME PRO</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="ios-bg">
-
-    <div class="fixed inset-0 overflow-hidden pointer-events-none z-[-1]">
-        <div class="absolute top-[-10%] left-[-10%] w-[70%] h-[70%] bg-zinc-500/5 rounded-full blur-[120px]"></div>
-        <div class="absolute bottom-[-10%] right-[-10%] w-[60%] h-[60%] bg-zinc-200/5 rounded-full blur-[120px]"></div>
-    </div>
+    <div class="fixed inset-0 bg-zinc-100 dark:bg-black -z-50"></div>
 
     <div class="max-w-6xl mx-auto px-6 py-10 space-y-10 relative z-10">
-        <header class="flex justify-between items-end px-2">
+        <header class="flex justify-between items-end">
             <div class="space-y-1">
                 <p id="clock" class="ios-time">00:00:00</p>
-                <h1 class="ios-title text-4xl">INFORMATION SYSTEM 2</h1>
+                <h1 class="ios-title text-4xl uppercase">Information System 2</h1>
             </div>
             <div class="flex items-center gap-4">
-                <button onclick="toggleThemeManually()" class="ios-icon-btn shadow-lg">
+                <button onclick="toggleThemeManually()" class="ios-icon-btn">
                     <span id="theme-icon">🌙</span>
                 </button>
-                <div class="ios-pill shadow-lg">
+                <div class="ios-pill">
                     <span class="ios-dot"></span>
-                    <span class="text-[10px] font-black uppercase tracking-widest opacity-80">System Active</span>
+                    <span class="text-[10px] font-black uppercase tracking-widest">System Active</span>
                 </div>
             </div>
         </header>
 
         <div id="next-deadline-area" class="fade-in"></div>
 
-        <main class="grid grid-cols-1 lg:grid-cols-12 gap-10">
+        <main class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6">
-                <section class="ios-card p-8 space-y-6">
-                    <h2 class="text-2xl font-bold tracking-tight">Add Task</h2>
-                    <div class="space-y-5">
+                <section class="ios-card p-8">
+                    <h2 class="text-2xl font-bold tracking-tight mb-6">Add Task</h2>
+                    <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-4">
-                            <div class="space-y-1">
+                            <div>
                                 <label class="ios-label">Category</label>
-                                <select id="kategori" class="ios-input w-full">
+                                <select id="kategori" class="ios-input">
                                     <option value="Assignment">Assignment</option>
                                     <option value="Event">Event</option>
                                 </select>
                             </div>
-                            <div class="space-y-1">
+                            <div>
                                 <label class="ios-label">Priority</label>
-                                <select id="priority" class="ios-input w-full">
+                                <select id="priority" class="ios-input">
                                     <option value="low">Low</option>
                                     <option value="medium" selected>Medium</option>
                                     <option value="high">High</option>
                                 </select>
                             </div>
                         </div>
-                        <div class="space-y-1">
-                            <label class="ios-label">Deadline Date</label>
-                            <input type="date" id="tglDeadline" class="ios-input w-full">
+                        <div>
+                            <label class="ios-label">Deadline</label>
+                            <input type="date" id="tglDeadline" class="ios-input">
                         </div>
-                        <div class="space-y-1">
-                            <label class="ios-label">Task Details</label>
-                            <textarea id="isiData" placeholder="What needs to be done?" class="ios-input w-full h-28 pt-3 resize-none"></textarea>
+                        <div>
+                            <label class="ios-label">Detail</label>
+                            <textarea id="isiData" placeholder="What's next?" class="ios-input h-24 pt-3"></textarea>
                         </div>
-                        <div class="space-y-1">
-                            <label class="ios-label">Resource Link</label>
-                            <input type="url" id="taskLink" placeholder="https://..." class="ios-input w-full">
+                        <div>
+                            <label class="ios-label">Resource</label>
+                            <input type="url" id="taskLink" placeholder="https://..." class="ios-input">
                         </div>
+                        <button onclick="simpanData()" id="btnSimpan" class="ios-primary-btn mt-4">Update Hub</button>
                     </div>
-                    <button onclick="simpanData()" id="btnSimpan" class="ios-primary-btn shadow-xl">Update Hub</button>
                 </section>
             </div>
 
-            <div class="lg:col-span-8 space-y-10">
-                <section class="ios-card p-8 min-h-[500px]">
-                    <h2 class="text-2xl font-bold tracking-tight mb-8">Timeline Feed</h2>
-                    <div id="listData" class="space-y-5"></div>
+            <div class="lg:col-span-8 space-y-8">
+                <section class="ios-card p-8 min-h-[400px]">
+                    <h2 class="text-2xl font-bold tracking-tight mb-6">Timeline Feed</h2>
+                    <div id="listData" class="space-y-4"></div>
                 </section>
                 
-                <section class="ios-card p-10">
-                    <h2 class="text-xs font-black opacity-30 uppercase tracking-[0.5em] text-center mb-10">Academic Calendar</h2>
-                    <div id="calendar-month-year" class="text-sm font-bold mb-8 text-center opacity-80 uppercase tracking-widest"></div>
-                    <div id="calendar-container" class="calendar-grid-large"></div>
+                <section class="ios-card p-8">
+                    <h2 class="text-xs font-black opacity-30 uppercase tracking-[0.4em] text-center mb-6">Academic Calendar</h2>
+                    <div id="calendar-month-year" class="text-sm font-bold mb-6 text-center opacity-80 uppercase tracking-widest"></div>
+                    <div id="calendar-container" class="calendar-grid"></div>
                 </section>
             </div>
         </main>
     </div>
 
-    <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center px-6">
-        <div class="absolute inset-0 bg-black/80 backdrop-blur-md" onclick="closeDeleteModal()"></div>
-        <div class="ios-card relative w-full max-w-xs p-10 text-center">
-            <h3 class="text-2xl font-bold mb-3">Delete Task?</h3>
-            <p class="text-sm opacity-50 mb-8">This action cannot be undone.</p>
+    <div id="deleteModal" class="fixed inset-0 z-[100] hidden items-center justify-center px-6 bg-black/80 backdrop-blur-sm">
+        <div class="ios-card p-10 text-center max-w-xs w-full">
+            <h3 class="text-2xl font-bold mb-8">Delete Task?</h3>
             <div class="flex gap-4">
-                <button onclick="closeDeleteModal()" class="flex-1 py-4 rounded-2xl bg-zinc-800 text-white font-bold">No</button>
-                <button id="confirmDeleteBtn" class="flex-1 py-4 rounded-2xl bg-white text-black font-bold">Yes</button>
+                <button onclick="closeDeleteModal()" class="flex-1 py-4 rounded-2xl bg-zinc-200 dark:bg-zinc-800 font-bold">No</button>
+                <button id="confirmDeleteBtn" class="flex-1 py-4 rounded-2xl bg-black dark:bg-white text-white dark:text-black font-bold">Yes</button>
             </div>
         </div>
     </div>
