--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>IS2 HUB | MONOCHROME PRO</title>
+    <title>INFORMATION SYSTEM 2</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css">
@@ -33,7 +33,7 @@
         <main class="grid grid-cols-1 lg:grid-cols-12 gap-8">
             <div class="lg:col-span-4 space-y-6">
                 <section class="ios-card p-8">
-                    <h2 class="text-2xl font-bold tracking-tight mb-6">Add Task</h2>
+                    <h2 class="text-2xl font-bold mb-6">Add Task</h2>
                     <div class="space-y-4">
                         <div class="grid grid-cols-2 gap-4">
                             <div>
@@ -71,7 +71,7 @@
 
             <div class="lg:col-span-8 space-y-8">
                 <section class="ios-card p-8 min-h-[400px]">
-                    <h2 class="text-2xl font-bold tracking-tight mb-6">Timeline Feed</h2>
+                    <h2 class="text-2xl font-bold mb-6">Timeline Feed</h2>
                     <div id="listData" class="space-y-4"></div>
                 </section>
                 
